tests/fixtures/valid/ignored/builtins/filter.py
# Valid filter() calls
# Auto-generated by scripts/generate_tests.py

b0_filter_none_str = filter(None, "hello")
b1_filter_none_bytes = filter(None, b"hello")
b2_filter_none_list = filter(None, [1, 2, 3])
b3_filter_none_dict = filter(None, {"a": 1})
b4_filter_none_set = filter(None, {1, 2, 3})

print("filter() tests passed!")
