tests/fixtures/invalid/pow_str_set_none.py
# Cannot call pow() with Str, Set[int], None
x = pow("hello", {1, 2, 3}, None)
